added favicon, description  meta tag and  corrected a few spelling mistakes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Color Permutation</title>
 	<meta name="author" content="Jonas Probst">
+	<meta name="description" content="A programm computing all permutations of colors within an area of a given resolution. Therefore showing all possible digital images of the past, present and the future within these boundaries.">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="shortcut icon" href="resources/img/colorpermutations.ico" />
 	<link rel="stylesheet" type="text/css" href="resources/css/main.css">
 	<script src="resources/js/jquery-1.11.1.min.js"></script>
 	<script src="resources/js/jquery-ui-1.9.2.custom.min.js"></script>
@@ -24,7 +26,7 @@
 			<span id="button-info-close" class="btn btn-close">x</span>
 			<h1>Color Permutation</h1>
 			<p>Jonas Probst, 2012</p>
-			<p>A program computing all permutations of colors within the RGB color space in a area of a given resolution. Thus showing all possible digital images of the past, present and future within these boundaries.<br/>Due to the magnitude of imagery and limited by the ability of computers today, this process takes billions of years to finish.
+			<p>A program computing all permutations of colors within the RGB color space in an area of a given resolution. Therefore showing all possible digital images of the past, present and future within these boundaries.<br/>Due to the magnitude of imagery and limited by the ability of computers today, this process takes billions of years to finish.
 			<ul>
 				<li id="resolution">Resolution: 256 x 192 px</li>
 				<li id="duration">Duration: 5 x (255 x 255 x 255)^(256 x 192) ms</li>
